message TermsOfService {
    required int32 id = 0;
    required string title = 1;
    required string content = 2;
    optional bool required = 3;
}
message TermsOfServiceRequest {
    enum TermsOfServiceCategory {
        REGISTERATION = 0;
    }
    repeated TermsOfServiceCategory categories = 0;
    repeated int32 tosIds = 1;
}
message TermsOfServiceResponse {
    repeated TermsOfService tos = 0;
}
message AccountRegisterRequest {
    required string accountKey = 0;
    required string emailAddress = 1;
    repeated int32 agreedTosIds = 2;
}
message AccountRegisterResponse {
    enum AccountRegisterationStatus {
        EMAIL_VALIDATION_REQUIRED = 0;
        KEY_ALREADY_EXISTS = 1;
        REGISTERED = 2;
        MALFORMED_KEY = 3;
        MALFORMED_EMAIL_ADDRESS = 4;
        MUST_AGREE_TOS = 5;
        FAILED = 6;
    }
    required bool registered = 0;
    optional string emailValidationId = 1 [default = ""];
}
message ResendValidationEmailRequest {
    required string emailValidationId = 0;
}
message ResendValidationEmailResponse {
    required bool success = 0;
}
message AccountEmailValidationRequest {
    required string emailValidationId = 0;
    required string emailValidationCode = 1;
}
message AccountEmailValidationResponse {
    required bool success = 0;
    optional string accountId = 1;
}